# audx

./: .gitignore  .pre-commit-config.yaml  .vercelignore  CHANGELOG.md  CONTRIBUTING.md  Makefile  PUBLISHING.md  README.md  SECURITY.md  package.json  pyproject.toml  pytest.ini  vercel.json
.github/workflows/: ci.yml  pages.yml  release.yml
docs/: README.md  getting-started.md  handoff-next-session.md  pattern-language.md  playing-live.md  push2-mapping.md  synth-kit.md  web-version-plan.md
docs/releases/: v0.3.0.md
examples/jungle-trap-codex/: SOURCE_STEMS.txt  project.audx
marketing/: build-beat.py
marketing/remotion/: README.md  package-lock.json  package.json  tsconfig.json
scripts/: build.sh  gen_web_fixtures.py  index-samples.sh  install.sh  make-demo-gif.py  publish-npm.sh  release.sh  render-ui-previews.py  scan-plugins.sh  sync-web-modules.sh
site/: index.html  play.html  studio.html  studio.js  style.css
site/audx_web/: webrender.py
src/audx/: __init__.py  app.py  arrangement.py  calibration.py  cli.py  config.py  daemon.py  daemon_client.py  engine.py  heartmula.py  keystore.py  live.py  macros.py  midi.py  midi_export.py  mixer.py  pattern.py  plugins.py  project.py  push2.py  sadact.py  sampler.py  synth.py  voice.py  watch.py  web.py
tests/: conftest.py  test_arrangement.py  test_batch_additions.py  test_cli.py  test_cli_spec_commands.py  test_engine.py  test_live.py  test_more_coverage.py  test_pattern.py  test_project.py  test_push2.py  test_render_synth.py  test_song.py  test_song_cli.py  test_synth.py  test_synth_melodic.py  test_ui_keys.py  test_web.py  test_web_fixtures.py  test_webrender.py
web/: package-lock.json  package.json  tsconfig.json
web/fixtures/: dsl.json  push2.json  song.json  swing.json  synth.json
web/src/: dsl.ts  midi.ts  project.ts  push2.ts  render.ts  samples.ts  song.ts  studio.ts  synth.ts  types.ts  zip.ts
web/tests/: dsl.test.ts  project.test.ts  push2.test.ts  render.test.ts  song.test.ts  (+3 more)
(+16 files in other folders)
