[project]
name = "audx"
version = "0.2.0"
description = "Terminal-native DAW: pattern sequencing, stem mixing, live coding workflow"
license = "MIT"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "sounddevice>=0.4.6",
  "soundfile>=0.12.1",
  "numpy>=1.26.0",
  "textual>=3.0.0",
  "typer>=0.12.0",
  "rich>=13.0.0",
  "mido>=1.3.3",
  "python-osc>=1.8.3",
  "requests>=2.31.0",
]

[[project.authors]]
name = "Chris Schofield"
email = "chrisschofield@totalaudiopromo.com"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
audx = "audx.cli:app"

[dependency-groups]
dev = [
  "pytest>=7.0",
  "pytest-cov>=4.0",
  "pytest-xdist>=3.0",
  "pytest-mock>=3.10",
  "hypothesis>=6.0",
  "ruff>=0.3.0",
  "mypy>=1.8.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "C4", "UP", "RUF"]
ignore = ["E501", "B008", "RUF007"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
ignore_missing_imports = true
follow_imports = "skip"
files = ["src/audx/pattern.py", "src/audx/project.py", "src/audx/sampler.py", "src/audx/cli.py"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-ra -q --strict-markers --tb=short --disable-warnings"
markers = [
  "unit: unit tests (fast, isolated)",
  "integration: integration tests (require audio device or files)",
  "e2e: end-to-end tests (full stack)",
  "slow: tests that take >1s",
]

[tool.coverage.run]
branch = true
source = ["audx"]

[tool.coverage.report]
show_missing = true
skip_covered = false
